--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,33 @@
-.hero{
-  background-color: #E5E5E5;
+.weblogo {
+	color: #2196f3;
 }
-.hero-list-list{
-
+.header-logo {
+	font-family: "Raleway";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 31px;
+	letter-spacing: 0.03em;
+	color: #212121;
 }
-.img{
-position: absolute;
-width: 370px;
-height: 294px;
-left: 215px;
-top: 262px;
-background: url(portfolio1.jpg);
+.hero {
+	background-color: #e5e5e5;
 }
-.title{
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-color: #212121;
+.hero-list-list {
+}
+.img {
+	position: absolute;
+	width: 370px;
+	height: 294px;
+	left: 215px;
+	top: 262px;
+	background: url(portfolio1.jpg);
+}
+.title {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 700;
+	color: #212121;
 }
 position: absolute;
 width: 322px;
