--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,18 @@
-.weblogo {
+:root {
+	--accent-bgr-color: #e5e5e5;
+	--accent-button-color: #2196f3;
+	--hero-button-active: ;
+}
+
+.header-logo {
+	display: flex;
+	font-family: Raleway, sans-serif;
 	color: #2196f3;
+	font-size: 26px;
+	line-height: 1.19;
+}
+.weblogo {
+	color: #292929;
 }
 .header-logo {
 	font-family: "Raleway";
@@ -12,6 +25,23 @@
 }
 .hero {
 	background-color: #e5e5e5;
+}
+.hero-btm {
+	color: var(--accent-button-color);
+	background-color: var(--accent-bgr-color);
+	font-family: inherit;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.875;
+	/* align-items: center;
+    text-align: center; */
+	letter-spacing: 0.06em;
+}
+.hero-button:hover,
+.hero-button:focus {
+	color: var(--accent-button-color);
+	background-color: var(--hero-button-active);
+	cursor: pointer;
 }
 .hero-list-list {
 }
