--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,6 @@ body {
 }
 
 .img {
-	position: absolute;
 	width: 370px;
 	height: 294px;
 	left: 215px;
@@ -64,7 +63,6 @@ body {
 	color: #212121;
 }
 .header-list-item {
-	position: absolute;
 	width: 68px;
 	height: 16px;
 	font-family: var(--main-font);
@@ -77,7 +75,6 @@ body {
 }
 .header-list-item:hover,
 .header-list-item:focus .head-cont {
-	position: absolute;
 	height: 16px;
 	font-family: var(--main-font);
 	font-style: normal;
@@ -95,7 +92,6 @@ body {
 	color: #757575;
 }
 .btn-port {
-	position: absolute;
 	width: 84px;
 	height: 26px;
 	font-family: var(--main-font);
@@ -138,7 +134,6 @@ body {
 	color: #ffffff;
 }
 .foot-cont {
-	position: absolute;
 	width: 231px;
 	height: 21px;
 	font-family: var(--main-font);
@@ -149,4 +144,10 @@ body {
 	/* or 171% */
 	letter-spacing: 0.03em;
 	color: rgba(255, 255, 255, 0.6);
+}
+.footer-logo {
+	background-color: #2f303a;
+}
+.web-footer-logo {
+	color: #ffffff;
 }
