--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body {
 	color: #ffffff;
 }
 .main-btn {
+	position: absolute;
 	color: var(--accent-button-color);
 	background-color: #2196f3;
 	font-family: inherit;
@@ -85,6 +86,9 @@ body {
 	line-height: 1.875;
 	letter-spacing: 0.06em;
 	border: none;
+	display: flex;
+	align-items: center;
+	text-align: center;
 }
 .main-btn:hover,
 .main-btn:focus {
