--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,8 @@ body {
 .web-logo {
 	color: #000000;
 }
-.header-link .contact-link {
+.header-link,
+.contact-link {
 	font-weight: 500;
 	line-height: 1.14;
 	letter-spacing: 0.02em;
